--- a/main.ipynb
+++ b/main.ipynb
@@ -12,6 +12,230 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "8da33693-35a6-4630-923d-3ac05b2c185f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data():\n",
+    "    raw_tweets = pd.read_json(r'farmers-protest-tweets-2021-03-5.json', lines=True)\n",
+    "    raw_tweets = raw_tweets[raw_tweets['lang']=='en']\n",
+    "    users = pd.json_normalize(raw_tweets['user'])\n",
+    "    users.drop(['description', 'linkTcourl'], axis=1, inplace=True)\n",
+    "    users.rename(columns={'id':'userId', 'url':'profileUrl'}, inplace=True)\n",
+    "    users = pd.DataFrame(users)\n",
+    "    users.drop_duplicates(subset=['userId'], inplace=True)\n",
+    "    user_id = []\n",
+    "    for user in raw_tweets['user']:\n",
+    "        uid = user['id']\n",
+    "        user_id.append(uid)\n",
+    "    raw_tweets['userId'] = user_id\n",
+    "\n",
+    "    # Remove less important columns\n",
+    "    cols = ['url', 'date', 'renderedContent', 'id', 'userId', 'replyCount', 'retweetCount', 'likeCount', 'quoteCount', 'source', 'media', 'retweetedTweet', 'quotedTweet', 'mentionedUsers']\n",
+    "    tweets = raw_tweets[cols]\n",
+    "    tweets.rename(columns={'id':'tweetId', 'url':'tweetUrl'}, inplace=True)\n",
+    "    tweets = pd.DataFrame(tweets)\n",
+    "    tweets.drop_duplicates(subset=['tweetId'], inplace=True)\n",
+    "    return tweets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2c129318-c81d-46bc-b3cb-a473e8099e21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweetUrl</th>\n",
+       "      <th>date</th>\n",
+       "      <th>renderedContent</th>\n",
+       "      <th>tweetId</th>\n",
+       "      <th>userId</th>\n",
+       "      <th>replyCount</th>\n",
+       "      <th>retweetCount</th>\n",
+       "      <th>likeCount</th>\n",
+       "      <th>quoteCount</th>\n",
+       "      <th>source</th>\n",
+       "      <th>media</th>\n",
+       "      <th>retweetedTweet</th>\n",
+       "      <th>quotedTweet</th>\n",
+       "      <th>mentionedUsers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://twitter.com/ShashiRajbhar6/status/1376...</td>\n",
+       "      <td>2021-03-30 03:33:46+00:00</td>\n",
+       "      <td>Support 👇\\n\\n#FarmersProtest</td>\n",
+       "      <td>1376739399593910273</td>\n",
+       "      <td>1015969769760096256</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://twitter.com/kaursuk06272818/status/137...</td>\n",
+       "      <td>2021-03-30 03:33:23+00:00</td>\n",
+       "      <td>Supporting farmers means supporting our countr...</td>\n",
+       "      <td>1376739306287427584</td>\n",
+       "      <td>1332937272581263362</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>[{'previewUrl': 'https://pbs.twimg.com/media/E...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://twitter.com/kaursuk06272818/status/137...</td>\n",
+       "      <td>2021-03-30 03:31:00+00:00</td>\n",
+       "      <td>Support farmers if you are related to food #St...</td>\n",
+       "      <td>1376738704128020488</td>\n",
+       "      <td>1332937272581263362</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>[{'previewUrl': 'https://pbs.twimg.com/media/E...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://twitter.com/SukhdevSingh_/status/13767...</td>\n",
+       "      <td>2021-03-30 03:30:45+00:00</td>\n",
+       "      <td>#StopHateAgainstFarmers support #FarmersProtes...</td>\n",
+       "      <td>1376738640542400518</td>\n",
+       "      <td>1308356658582618112</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://twitter.com/Davidmu66668113/status/137...</td>\n",
+       "      <td>2021-03-30 03:30:30+00:00</td>\n",
+       "      <td>You hate farmers I hate you, \\nif you love the...</td>\n",
+       "      <td>1376738579171344386</td>\n",
+       "      <td>1357311756532649985</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            tweetUrl  \\\n",
+       "0  https://twitter.com/ShashiRajbhar6/status/1376...   \n",
+       "1  https://twitter.com/kaursuk06272818/status/137...   \n",
+       "2  https://twitter.com/kaursuk06272818/status/137...   \n",
+       "3  https://twitter.com/SukhdevSingh_/status/13767...   \n",
+       "4  https://twitter.com/Davidmu66668113/status/137...   \n",
+       "\n",
+       "                       date  \\\n",
+       "0 2021-03-30 03:33:46+00:00   \n",
+       "1 2021-03-30 03:33:23+00:00   \n",
+       "2 2021-03-30 03:31:00+00:00   \n",
+       "3 2021-03-30 03:30:45+00:00   \n",
+       "4 2021-03-30 03:30:30+00:00   \n",
+       "\n",
+       "                                     renderedContent              tweetId  \\\n",
+       "0                       Support 👇\\n\\n#FarmersProtest  1376739399593910273   \n",
+       "1  Supporting farmers means supporting our countr...  1376739306287427584   \n",
+       "2  Support farmers if you are related to food #St...  1376738704128020488   \n",
+       "3  #StopHateAgainstFarmers support #FarmersProtes...  1376738640542400518   \n",
+       "4  You hate farmers I hate you, \\nif you love the...  1376738579171344386   \n",
+       "\n",
+       "                userId  replyCount  retweetCount  likeCount  quoteCount  \\\n",
+       "0  1015969769760096256           0             0          0           0   \n",
+       "1  1332937272581263362           0             0          0           0   \n",
+       "2  1332937272581263362           0             0          0           0   \n",
+       "3  1308356658582618112           0             1          3           0   \n",
+       "4  1357311756532649985           0             0          1           0   \n",
+       "\n",
+       "                                              source  \\\n",
+       "0  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "1  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "2  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "3  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "4  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "\n",
+       "                                               media  retweetedTweet  \\\n",
+       "0                                               None             NaN   \n",
+       "1  [{'previewUrl': 'https://pbs.twimg.com/media/E...             NaN   \n",
+       "2  [{'previewUrl': 'https://pbs.twimg.com/media/E...             NaN   \n",
+       "3                                               None             NaN   \n",
+       "4                                               None             NaN   \n",
+       "\n",
+       "  quotedTweet mentionedUsers  \n",
+       "0        None           None  \n",
+       "1        None           None  \n",
+       "2        None           None  \n",
+       "3        None           None  \n",
+       "4        None           None  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = load_data()\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "8c0b7fb5-ba19-4637-8669-f0c775993508",
    "metadata": {},
