--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "67b62aaf-4fc4-4375-8033-60599c74b02c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "8da33693-35a6-4630-923d-3ac05b2c185f",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "2c129318-c81d-46bc-b3cb-a473e8099e21",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "4        None           None  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,14 +236,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "e88268f8-5c10-4094-9ad2-2aaa9f5cf539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def P1(data):\n",
+    "    top10ret = data.nlargest(10, 'retweetCount')\n",
+    "    return top10ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "8c0b7fb5-ba19-4637-8669-f0c775993508",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main(request):\n",
+    "    data = load_data()\n",
+    "    output = \"\"\n",
     "    if(request==\"P1\"):\n",
-    "        pass\n",
+    "        output = P1(data)\n",
+    "        display(output)\n",
     "    elif(request==\"P2\"):\n",
     "        pass\n",
     "    elif(request==\"P3\"):\n",
@@ -251,6 +266,24 @@
     "    elif(request==\"P4\"):\n",
     "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91b2e1f3-a82a-4346-8293-ca3ce9685c68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main(\"P1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0de45ae4-336f-40cb-bf7e-751f08716ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
