--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "67b62aaf-4fc4-4375-8033-60599c74b02c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8da33693-35a6-4630-923d-3ac05b2c185f",
    "metadata": {},
    "outputs": [],
@@ -26,26 +26,42 @@
     "    users = pd.DataFrame(users)\n",
     "    users.drop_duplicates(subset=['userId'], inplace=True)\n",
     "    user_id = []\n",
+    "    names = []\n",
     "    for user in raw_tweets['user']:\n",
     "        uid = user['id']\n",
+    "        n = user['displayname']\n",
     "        user_id.append(uid)\n",
+    "        names.append(n)\n",
     "    raw_tweets['userId'] = user_id\n",
+    "    raw_tweets['displayName'] = names\n",
     "\n",
     "    # Remove less important columns\n",
-    "    cols = ['url', 'date', 'renderedContent', 'id', 'userId', 'replyCount', 'retweetCount', 'likeCount', 'quoteCount', 'source', 'media', 'retweetedTweet', 'quotedTweet', 'mentionedUsers']\n",
+    "    cols = ['url', 'date', 'renderedContent', 'id', 'userId', 'displayName', 'replyCount', 'retweetCount', 'likeCount', 'quoteCount', 'source', 'media', 'retweetedTweet', 'quotedTweet', 'mentionedUsers']\n",
     "    tweets = raw_tweets[cols]\n",
     "    tweets.rename(columns={'id':'tweetId', 'url':'tweetUrl'}, inplace=True)\n",
     "    tweets = pd.DataFrame(tweets)\n",
+    "    tweets['date'] = tweets['date'].dt.strftime('%Y-%m-%d')\n",
     "    tweets.drop_duplicates(subset=['tweetId'], inplace=True)\n",
     "    return tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "2c129318-c81d-46bc-b3cb-a473e8099e21",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\crico\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\pandas\\core\\frame.py:5039: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return super().rename(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -72,6 +88,7 @@
        "      <th>renderedContent</th>\n",
        "      <th>tweetId</th>\n",
        "      <th>userId</th>\n",
+       "      <th>displayName</th>\n",
        "      <th>replyCount</th>\n",
        "      <th>retweetCount</th>\n",
        "      <th>likeCount</th>\n",
@@ -87,10 +104,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>https://twitter.com/ShashiRajbhar6/status/1376...</td>\n",
-       "      <td>2021-03-30 03:33:46+00:00</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>Support 👇\\n\\n#FarmersProtest</td>\n",
        "      <td>1376739399593910273</td>\n",
        "      <td>1015969769760096256</td>\n",
+       "      <td>Shashi Rajbhar</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -104,10 +122,11 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>https://twitter.com/kaursuk06272818/status/137...</td>\n",
-       "      <td>2021-03-30 03:33:23+00:00</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>Supporting farmers means supporting our countr...</td>\n",
        "      <td>1376739306287427584</td>\n",
        "      <td>1332937272581263362</td>\n",
+       "      <td>KAUR SUKH🌾ਕੌਰ ਸੁਖ</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -121,10 +140,11 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>https://twitter.com/kaursuk06272818/status/137...</td>\n",
-       "      <td>2021-03-30 03:31:00+00:00</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>Support farmers if you are related to food #St...</td>\n",
        "      <td>1376738704128020488</td>\n",
        "      <td>1332937272581263362</td>\n",
+       "      <td>KAUR SUKH🌾ਕੌਰ ਸੁਖ</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -138,10 +158,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>https://twitter.com/SukhdevSingh_/status/13767...</td>\n",
-       "      <td>2021-03-30 03:30:45+00:00</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>#StopHateAgainstFarmers support #FarmersProtes...</td>\n",
        "      <td>1376738640542400518</td>\n",
        "      <td>1308356658582618112</td>\n",
+       "      <td>Sukhdev Singh</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
@@ -155,10 +176,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>https://twitter.com/Davidmu66668113/status/137...</td>\n",
-       "      <td>2021-03-30 03:30:30+00:00</td>\n",
+       "      <td>2021-03-30</td>\n",
        "      <td>You hate farmers I hate you, \\nif you love the...</td>\n",
        "      <td>1376738579171344386</td>\n",
        "      <td>1357311756532649985</td>\n",
+       "      <td>tera jija 🤨🚩🇺🇸</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -174,19 +196,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                                            tweetUrl  \\\n",
-       "0  https://twitter.com/ShashiRajbhar6/status/1376...   \n",
-       "1  https://twitter.com/kaursuk06272818/status/137...   \n",
-       "2  https://twitter.com/kaursuk06272818/status/137...   \n",
-       "3  https://twitter.com/SukhdevSingh_/status/13767...   \n",
-       "4  https://twitter.com/Davidmu66668113/status/137...   \n",
-       "\n",
-       "                       date  \\\n",
-       "0 2021-03-30 03:33:46+00:00   \n",
-       "1 2021-03-30 03:33:23+00:00   \n",
-       "2 2021-03-30 03:31:00+00:00   \n",
-       "3 2021-03-30 03:30:45+00:00   \n",
-       "4 2021-03-30 03:30:30+00:00   \n",
+       "                                            tweetUrl        date  \\\n",
+       "0  https://twitter.com/ShashiRajbhar6/status/1376...  2021-03-30   \n",
+       "1  https://twitter.com/kaursuk06272818/status/137...  2021-03-30   \n",
+       "2  https://twitter.com/kaursuk06272818/status/137...  2021-03-30   \n",
+       "3  https://twitter.com/SukhdevSingh_/status/13767...  2021-03-30   \n",
+       "4  https://twitter.com/Davidmu66668113/status/137...  2021-03-30   \n",
        "\n",
        "                                     renderedContent              tweetId  \\\n",
        "0                       Support 👇\\n\\n#FarmersProtest  1376739399593910273   \n",
@@ -195,19 +210,19 @@
        "3  #StopHateAgainstFarmers support #FarmersProtes...  1376738640542400518   \n",
        "4  You hate farmers I hate you, \\nif you love the...  1376738579171344386   \n",
        "\n",
-       "                userId  replyCount  retweetCount  likeCount  quoteCount  \\\n",
-       "0  1015969769760096256           0             0          0           0   \n",
-       "1  1332937272581263362           0             0          0           0   \n",
-       "2  1332937272581263362           0             0          0           0   \n",
-       "3  1308356658582618112           0             1          3           0   \n",
-       "4  1357311756532649985           0             0          1           0   \n",
+       "                userId        displayName  replyCount  retweetCount  \\\n",
+       "0  1015969769760096256     Shashi Rajbhar           0             0   \n",
+       "1  1332937272581263362  KAUR SUKH🌾ਕੌਰ ਸੁਖ           0             0   \n",
+       "2  1332937272581263362  KAUR SUKH🌾ਕੌਰ ਸੁਖ           0             0   \n",
+       "3  1308356658582618112      Sukhdev Singh           0             1   \n",
+       "4  1357311756532649985     tera jija 🤨🚩🇺🇸           0             0   \n",
        "\n",
-       "                                              source  \\\n",
-       "0  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "1  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "2  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "3  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "4  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "   likeCount  quoteCount                                             source  \\\n",
+       "0          0           0  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "1          0           0  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "2          0           0  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "3          3           0  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "4          1           0  <a href=\"http://twitter.com/download/android\" ...   \n",
        "\n",
        "                                               media  retweetedTweet  \\\n",
        "0                                               None             NaN   \n",
@@ -224,7 +239,7 @@
        "4        None           None  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "e88268f8-5c10-4094-9ad2-2aaa9f5cf539",
    "metadata": {},
    "outputs": [],
@@ -248,7 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
+   "id": "308c2f27-35ad-4a1d-a98c-05dedd2d75d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def P2(data):\n",
+    "    top10twe = data.displayName.value_counts().nlargest(10)\n",
+    "    return top10twe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "8c0b7fb5-ba19-4637-8669-f0c775993508",
    "metadata": {},
    "outputs": [],
@@ -260,7 +287,8 @@
     "        output = P1(data)\n",
     "        display(output)\n",
     "    elif(request==\"P2\"):\n",
-    "        pass\n",
+    "        output = P2(data)\n",
+    "        display(output)\n",
     "    elif(request==\"P3\"):\n",
     "        pass\n",
     "    elif(request==\"P4\"):\n",
@@ -274,13 +302,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main(\"P1\")"
+    "main(\"P2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0de45ae4-336f-40cb-bf7e-751f08716ca5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Harjot Singh                                          7295\n",
+       "ਕਿਸਾਨAndolajivi ravinder kaur चोकीदार ही कातिल है     2088\n",
+       "Jaspal Kaur Bains.For love of Punjab,Sikhi & India    1991\n",
+       "Jot                                                   1872\n",
+       "Theinactiveactivist                                   1803\n",
+       "🍊raman🚜                                               1722\n",
+       "Jaz 🇨🇦🌾ਗਰਮ ਖਿਆਲੀ 📌                                    1491\n",
+       "JassG                                                 1458\n",
+       "Kisan Bot🚜🌾                                           1453\n",
+       "mohd khaliquzzama                                     1446\n",
+       "Name: displayName, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "output = P2(data)\n",
+    "display(output)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0de45ae4-336f-40cb-bf7e-751f08716ca5",
+   "id": "7c7981c7-c8dd-4f29-817f-7328f3cbf2ac",
    "metadata": {},
    "outputs": [],
    "source": []
