--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "67b62aaf-4fc4-4375-8033-60599c74b02c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8da33693-35a6-4630-923d-3ac05b2c185f",
    "metadata": {},
    "outputs": [],
@@ -26,209 +26,31 @@
     "    users = pd.DataFrame(users)\n",
     "    users.drop_duplicates(subset=['userId'], inplace=True)\n",
     "    user_id = []\n",
+    "    names = []\n",
     "    for user in raw_tweets['user']:\n",
     "        uid = user['id']\n",
+    "        n = user['displayname']\n",
     "        user_id.append(uid)\n",
+    "        names.append(n)\n",
     "    raw_tweets['userId'] = user_id\n",
+    "    raw_tweets['displayName'] = names\n",
     "\n",
     "    # Remove less important columns\n",
-    "    cols = ['url', 'date', 'renderedContent', 'id', 'userId', 'replyCount', 'retweetCount', 'likeCount', 'quoteCount', 'source', 'media', 'retweetedTweet', 'quotedTweet', 'mentionedUsers']\n",
+    "    cols = ['url', 'date', 'renderedContent', 'id', 'userId', 'displayName', 'replyCount', 'retweetCount', 'likeCount', 'quoteCount', 'source', 'media', 'retweetedTweet', 'quotedTweet', 'mentionedUsers']\n",
     "    tweets = raw_tweets[cols]\n",
     "    tweets.rename(columns={'id':'tweetId', 'url':'tweetUrl'}, inplace=True)\n",
     "    tweets = pd.DataFrame(tweets)\n",
+    "    tweets['date'] = tweets['date'].dt.strftime('%Y-%m-%d')\n",
     "    tweets.drop_duplicates(subset=['tweetId'], inplace=True)\n",
     "    return tweets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2c129318-c81d-46bc-b3cb-a473e8099e21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweetUrl</th>\n",
-       "      <th>date</th>\n",
-       "      <th>renderedContent</th>\n",
-       "      <th>tweetId</th>\n",
-       "      <th>userId</th>\n",
-       "      <th>replyCount</th>\n",
-       "      <th>retweetCount</th>\n",
-       "      <th>likeCount</th>\n",
-       "      <th>quoteCount</th>\n",
-       "      <th>source</th>\n",
-       "      <th>media</th>\n",
-       "      <th>retweetedTweet</th>\n",
-       "      <th>quotedTweet</th>\n",
-       "      <th>mentionedUsers</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://twitter.com/ShashiRajbhar6/status/1376...</td>\n",
-       "      <td>2021-03-30 03:33:46+00:00</td>\n",
-       "      <td>Support 👇\\n\\n#FarmersProtest</td>\n",
-       "      <td>1376739399593910273</td>\n",
-       "      <td>1015969769760096256</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://twitter.com/kaursuk06272818/status/137...</td>\n",
-       "      <td>2021-03-30 03:33:23+00:00</td>\n",
-       "      <td>Supporting farmers means supporting our countr...</td>\n",
-       "      <td>1376739306287427584</td>\n",
-       "      <td>1332937272581263362</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
-       "      <td>[{'previewUrl': 'https://pbs.twimg.com/media/E...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://twitter.com/kaursuk06272818/status/137...</td>\n",
-       "      <td>2021-03-30 03:31:00+00:00</td>\n",
-       "      <td>Support farmers if you are related to food #St...</td>\n",
-       "      <td>1376738704128020488</td>\n",
-       "      <td>1332937272581263362</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
-       "      <td>[{'previewUrl': 'https://pbs.twimg.com/media/E...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://twitter.com/SukhdevSingh_/status/13767...</td>\n",
-       "      <td>2021-03-30 03:30:45+00:00</td>\n",
-       "      <td>#StopHateAgainstFarmers support #FarmersProtes...</td>\n",
-       "      <td>1376738640542400518</td>\n",
-       "      <td>1308356658582618112</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://twitter.com/Davidmu66668113/status/137...</td>\n",
-       "      <td>2021-03-30 03:30:30+00:00</td>\n",
-       "      <td>You hate farmers I hate you, \\nif you love the...</td>\n",
-       "      <td>1376738579171344386</td>\n",
-       "      <td>1357311756532649985</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            tweetUrl  \\\n",
-       "0  https://twitter.com/ShashiRajbhar6/status/1376...   \n",
-       "1  https://twitter.com/kaursuk06272818/status/137...   \n",
-       "2  https://twitter.com/kaursuk06272818/status/137...   \n",
-       "3  https://twitter.com/SukhdevSingh_/status/13767...   \n",
-       "4  https://twitter.com/Davidmu66668113/status/137...   \n",
-       "\n",
-       "                       date  \\\n",
-       "0 2021-03-30 03:33:46+00:00   \n",
-       "1 2021-03-30 03:33:23+00:00   \n",
-       "2 2021-03-30 03:31:00+00:00   \n",
-       "3 2021-03-30 03:30:45+00:00   \n",
-       "4 2021-03-30 03:30:30+00:00   \n",
-       "\n",
-       "                                     renderedContent              tweetId  \\\n",
-       "0                       Support 👇\\n\\n#FarmersProtest  1376739399593910273   \n",
-       "1  Supporting farmers means supporting our countr...  1376739306287427584   \n",
-       "2  Support farmers if you are related to food #St...  1376738704128020488   \n",
-       "3  #StopHateAgainstFarmers support #FarmersProtes...  1376738640542400518   \n",
-       "4  You hate farmers I hate you, \\nif you love the...  1376738579171344386   \n",
-       "\n",
-       "                userId  replyCount  retweetCount  likeCount  quoteCount  \\\n",
-       "0  1015969769760096256           0             0          0           0   \n",
-       "1  1332937272581263362           0             0          0           0   \n",
-       "2  1332937272581263362           0             0          0           0   \n",
-       "3  1308356658582618112           0             1          3           0   \n",
-       "4  1357311756532649985           0             0          1           0   \n",
-       "\n",
-       "                                              source  \\\n",
-       "0  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "1  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "2  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "3  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "4  <a href=\"http://twitter.com/download/android\" ...   \n",
-       "\n",
-       "                                               media  retweetedTweet  \\\n",
-       "0                                               None             NaN   \n",
-       "1  [{'previewUrl': 'https://pbs.twimg.com/media/E...             NaN   \n",
-       "2  [{'previewUrl': 'https://pbs.twimg.com/media/E...             NaN   \n",
-       "3                                               None             NaN   \n",
-       "4                                               None             NaN   \n",
-       "\n",
-       "  quotedTweet mentionedUsers  \n",
-       "0        None           None  \n",
-       "1        None           None  \n",
-       "2        None           None  \n",
-       "3        None           None  \n",
-       "4        None           None  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = load_data()\n",
     "data.head()"
@@ -236,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "e88268f8-5c10-4094-9ad2-2aaa9f5cf539",
    "metadata": {},
    "outputs": [],
@@ -244,6 +66,30 @@
     "def P1(data):\n",
     "    top10ret = data.nlargest(10, 'retweetCount')\n",
     "    return top10ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "29d87dee-c87c-48d4-bebe-674adf9aea10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def P2(data):\n",
+    "    top10twe = data.displayName.value_counts().nlargest(10)\n",
+    "    return top10twe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "506eae83-3419-4cfa-9823-ff52c5f48c1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def P3(data):\n",
+    "    top10days = data.date.value_counts().nlargest(10)\n",
+    "    return top10days"
    ]
   },
   {
@@ -260,9 +106,11 @@
     "        output = P1(data)\n",
     "        display(output)\n",
     "    elif(request==\"P2\"):\n",
-    "        pass\n",
+    "        output = P2(data)\n",
+    "        display(output)\n",
     "    elif(request==\"P3\"):\n",
-    "        pass\n",
+    "        output = P3(data)\n",
+    "        display(output)\n",
     "    elif(request==\"P4\"):\n",
     "        pass"
    ]
